--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,7 @@
 <main class="container">
   <p>For privacy, I do not list a phone number online. Please email me using the button below.</p>
   <p><a class="btn" href="mailto:ldanescu4713@conestogac.on.ca">Email Me</a></p>
-  <p class="note">(Alternatively, connect a form service and add a contact form here.)</p>
+  <p class="note"></p>
 </main>
 <footer class="site-footer"><div class="container"><p>© Laurentiu Danescu</p></div></footer>
 </body>
