--- a/education.html
+++ b/education.html
@@ -24,7 +24,7 @@
     <li><strong>Applied Mathematics & Computer Science</strong> — Spiru Haret University (2007–2009)</li>
     <li><strong>Baccalaureate Diploma</strong> — Aurel Vlaicu National College, Bucharest (2000–2004)</li>
     <li>Relevant coursework: Operations & Troubleshooting, Network Infrastructure, Virtualization, Linux/Windows, Active Directory.</li>
-    <li>Certificates: (add CompTIA A+ / Network+ / CCNA when completed)</li>
+    <li>Certificates: CCNA, CCNP, FCA, FCP</li>
   </ul>
 </main>
 <footer class="site-footer"><div class="container"><p>© Laurentiu Danescu</p></div></footer>
