--- a/awards.html
+++ b/awards.html
@@ -21,8 +21,8 @@
 <main class="container">
   <p>Upload or reference letters of recommendation, thank-you notes, and performance evaluations. Redact sensitive details before posting online.</p>
   <ul>
-    <li>(Add testimonial or excerpt.)</li>
-    <li>(Add volunteer recognition.)</li>
+    <li><img src=TY_e-mail.jpg></li>
+    <li></li>
   </ul>
 </main>
 <footer class="site-footer"><div class="container"><p>© Laurentiu Danescu</p></div></footer>
