--- a/awards.html
+++ b/awards.html
@@ -1,4 +1,3 @@
-
 <!doctype html>
 <html lang="en">
 <head>
@@ -21,7 +20,7 @@
 <main class="container">
   <p></p>
   <ul>
-    <li><img src=TY_e-mail.jpg></li>
+    <li><img src="TY_e-mail.jpg" alt="Thank You Email"></li>
     <li></li>
   </ul>
 </main>
